# Benchamrk-cli

./: .gitignore  MANIFEST.in  README.md  debug_report.html  pyproject.toml  report.html  results.json  setup.py
.github/workflows/: publish.yml
src/benchmark_cli/: config.yaml  main.py  reporter.py
src/benchmark_cli/benchmarks/fibonacci/cpp/: main.cpp
src/benchmark_cli/benchmarks/fibonacci/javascript/: main.js
src/benchmark_cli/benchmarks/fibonacci/python/: main.py
src/benchmark_cli/benchmarks/fibonacci/rust/: main.rs
src/benchmark_cli/benchmarks/matrix_mul/python/: main.py
src/benchmark_cli/benchmarks/matrix_mul/rust/: main.rs
src/benchmark_cli/benchmarks/quicksort/python/: main.py
src/velocicode/: config.yaml  main.py  report_generator.py  reporter.py  runner.py  system_info.py
src/velocicode/benchmarks/async_io/csharp/: Program.cs
src/velocicode/benchmarks/async_io/go/: main.go
src/velocicode/benchmarks/async_io/javascript/: main.js
src/velocicode/benchmarks/async_io/python/: main.py
src/velocicode/benchmarks/async_io/rust/: Cargo.toml
src/velocicode/benchmarks/fibonacci/csharp/: Program.cs
src/velocicode/benchmarks/fibonacci/go/: main.go
src/velocicode/benchmarks/fibonacci/java/: Main.java
src/velocicode/benchmarks/http_server/csharp/: Program.cs
src/velocicode/benchmarks/http_server/go/: main.go
src/velocicode/benchmarks/http_server/javascript/: main.js
src/velocicode/benchmarks/json_parse/: generate_data.py
src/velocicode/benchmarks/regex_redact/: generate_data.py
tests/: test_integration.py  test_reporter.py
(+54 files in other folders)
