[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Velocicode"
version = "0.4.0"
description = "A CLI tool for programming language speed benchmarks"
authors = [
  { name="Code Agent", email="agent@example.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "rich>=13.0.0",
]

[project.scripts]
velocicode = "velocicode.main:main"

[tool.setuptools.package-data]
velocicode = ["config.yaml", "benchmarks/**/*"]
